--- a/main.css
+++ b/main.css
@@ -23,6 +23,35 @@ body {
 .piano-keys .key {
   list-style: none;
   color: #a2a2a2;
+  user-select: none;
+  text-transform: uppercase;
+}
+.piano-keys span {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  font-size: 1.13rem;
+  text-align: center;
+}
+.piano-keys .white:active{
+    box-shadow: inset -5px 5px 20px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(to bottom , #fff0 , #eee 100%);
+
+}
+.piano-keys .white {
+  width: 70px;
+  height: 230px;
+  border: 1x solid #000;
+  border-radius: 8px;
+  background: linear-gradient(#fff 96%, #eee 4%);
+}
+.piano-keys .black {
+  width: 44px;
+  border-radius: 0 0 5px;
+  margin: 0 -22px 0 -22px;
+  z-index: 2;
+  height: 140px;
+  background: linear-gradient(#333, #000);
 }
 .wrapper header {
   color: #b2b2b2;
@@ -41,4 +70,37 @@ header .column span {
   font-weight: 500;
   font-size: 1.19rem;
   margin-right: 15px;
+}
+.volume-slider input {
+  accent-color: #fff;
+}
+.key-checkbox input {
+  position: relative;
+  appearance: none;
+  width: 60px;
+  border-radius: 30px;
+  cursor: pointer;
+  height: 30px;
+  background: #4b4b4b;
+}
+.key-checkbox input::before {
+  content: "";
+  position: absolute;
+  background: #8c8c8c;
+  height: 20px;
+  width: 20px;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  border-radius: inherit;
+  transition: all 0.3s ease;
+}
+
+.key-checkbox input:checked::before {
+  left: 35px;
+  background: #fff;
+}
+.piano-keys {
+  display: flex;
+  margin-top: 40px;
 }
